Creación página para el carrito de compras

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,21 +44,21 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">Tour</h1>
+        <h1 class="sitename">WordlAgency</h1>
       </a>
 
-      <nav id="navmenu" class="navmenu">
+       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="pages/about.html">About</a></li>
-          <li><a href="pages/destinations.html">Destinations</a></li>
-          <li><a href="pages/tours.html">Tours</a></li>
-          <li><a href="pages/login.html">Contact</a></li>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="about.html">Sobre Nosotros</a></li>
+          <li><a href="destinations.html">Destinos</a></li>
+          <li><a href="tours.html">Tours</a></li>
+          <li><a href="login.html" class="active">Iniciar Sesión</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
-        <a class="btn-getstarted" href="login.html">Get Started</a>
+      
+      <a class="btn-getstarted" href="register.html">Registrarse</a>
     </div>
   </header>
 
@@ -81,8 +81,8 @@
               <h1 class="hero-title">Discover Your Perfect Journey</h1>
               <p class="hero-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
               <div class="hero-buttons">
-                <a href="#" class="btn btn-primary me-3">Start Exploring</a>
-                <a href="#" class="btn btn-outline">Browse Tours</a>
+                <a href="#" class="btn btn-primary me-3">Destinos</a>
+                <a href="#" class="btn btn-outline">Tours</a>
               </div>
             </div>
           </div>
@@ -96,11 +96,8 @@
                     <label for="destination">Destination</label>
                     <select name="destination" id="destination" class="form-select" required="">
                       <option value="">Choose your destination</option>
-                      <option value="europe">Europe</option>
-                      <option value="asia">Asia</option>
-                      <option value="america">America</option>
-                      <option value="africa">Africa</option>
-                      <option value="oceania">Oceania</option>
+                      <option value="europe">Guayaquil</option>
+                      <option value="asia">San Juan</option>
                     </select>
                   </div>
 
@@ -109,12 +106,6 @@
                       <div class="form-group mb-3">
                         <label for="checkin">Departure Date</label>
                         <input type="date" name="checkin" id="checkin" class="form-control" required="">
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="form-group mb-3">
-                        <label for="checkout">Return Date</label>
-                        <input type="date" name="checkout" id="checkout" class="form-control" required="">
                       </div>
                     </div>
                   </div>
@@ -144,19 +135,7 @@
                     </div>
                   </div>
 
-                  <div class="form-group mb-3">
-                    <label for="tour-type">Tour Type</label>
-                    <select name="tour_type" id="tour-type" class="form-select" required="">
-                      <option value="">Select tour type</option>
-                      <option value="adventure">Adventure</option>
-                      <option value="cultural">Cultural</option>
-                      <option value="relaxation">Relaxation</option>
-                      <option value="family">Family</option>
-                      <option value="luxury">Luxury</option>
-                    </select>
-                  </div>
-
-                  <button type="submit" class="btn btn-primary w-100">Find Your Perfect Trip</button>
+                  <button type="submit" class="btn btn-primary w-100">Buscar Tours</button>
                 </form>
               </div>
             </div>
