--- a/frontend/pages/about.html
+++ b/frontend/pages/about.html
@@ -43,21 +43,21 @@
       <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">Tour</h1>
+        <h1 class="sitename">WordlAgency</h1>
       </a>
 
-      <nav id="navmenu" class="navmenu">
+       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="about.html" class="active">About</a></li>
-          <li><a href="destinations.html">Destinations</a></li>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="about.html">Sobre Nosotros</a></li>
+          <li><a href="destinations.html">Destinos</a></li>
           <li><a href="tours.html">Tours</a></li>
-          <li><a href="login.html" class="active">Login</a></li>
+          <li><a href="login.html" class="active">Iniciar Sesión</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-        <a class="btn-getstarted" href="login.html">Get Started</a>
+      <a class="btn-getstarted" href="register.html">Registrarse</a>
 
     </div>
   </header>
