--- a/frontend/pages/car.html
+++ b/frontend/pages/car.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contact - Tour Bootstrap Template</title>
+  <title>Shopping Cart - Tour Bootstrap Template</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -36,7 +36,7 @@
   ======================================================== -->
 </head>
 
-<body class="contact-page">
+<body class="shopping-cart-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
@@ -47,7 +47,7 @@
         <h1 class="sitename">WordlAgency</h1>
       </a>
 
-       <nav id="navmenu" class="navmenu">
+      <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="../index.html">Inicio</a></li>
           <li><a href="about.html">Sobre Nosotros</a></li>
@@ -65,55 +65,91 @@
 
   <main class="main">
 
-    <!-- Travel Hero Section -->
-    <section id="travel-hero" class="travel-hero section dark-background">
-
-      <div class="hero-background">
-        <video autoplay="" muted="" loop="">
-          <source src="../assets/img/travel/video-2.mp4" type="video/mp4">
-        </video>
-        <div class="hero-overlay"></div>
-      </div>
-
+    <!-- Page Title -->
+    <div class="page-title dark-background" data-aos="fade" style="background-image: url(../assets/img/travel/showcase-8.webp);">
       <div class="container position-relative">
-        <div class="row align-items-center">
-          <div class="col-lg-7">
-            <div class="hero-text" data-aos="fade-up" data-aos-delay="100">
-              <h1 class="hero-title">Inicia Sesión Para Disfrutar Tu Viaje</h1>
-              <p class="hero-subtitle">Descubre muchas actividades para hacer y compartir con las personas que más amas.</p>
-              <div class="hero-buttons">
-                <a href="#" class="btn btn-primary me-3">Destinos</a>
-                <a href="#" class="btn btn-outline">Tours</a>
+        <h1>Carrito de Compra</h1>
+        <p>Mira tus reservas y realiza el pago.</p>
+      </div>
+    </div><!-- End Page Title -->
+
+    <!-- Shopping Cart Section -->
+    <section id="shopping-cart" class="shopping-cart section">
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row">
+          <div class="col-lg-8">
+            <div class="cart-items">
+              <h2>Tours Seleccionados</h2>
+              <div class="cart-item d-flex align-items-center justify-content-between">
+                <div class="item-details d-flex align-items-center">
+                  <img src="../assets/img/travel/tour-1.webp" alt="Tour Image" class="item-image">
+                  <div>
+                    <h5>Paris Romance</h5>
+                    <p>5 Days, 4 Nights</p>
+                  </div>
+                </div>
+                <div class="item-quantity">
+                  <input type="number" value="1" min="1" class="form-control">
+                </div>
+                <div class="item-price">$1,299</div>
+                <button class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></button>
               </div>
+              <div class="cart-item d-flex align-items-center justify-content-between">
+                <div class="item-details d-flex align-items-center">
+                  <img src="../assets/img/travel/tour-2.webp" alt="Tour Image" class="item-image">
+                  <div>
+                    <h5>Bali Adventure</h5>
+                    <p>7 Days, 6 Nights</p>
+                  </div>
+                </div>
+                <div class="item-quantity">
+                  <input type="number" value="2" min="1" class="form-control">
+                </div>
+                <div class="item-price">$899</div>
+                <button class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></button>
+              </div>
+              <a href="tours.html" class="btn btn-outline-primary mt-3"><i class="bi bi-plus-circle"></i> Add New Items</a>
             </div>
           </div>
-
-          <div class="col-lg-5">
-            <div class="booking-form-wrapper" data-aos="fade-left" data-aos-delay="200">
-                <div class="booking-form">
-                    <h3 class="form-title">Iniciar Sesión</h3>
-                        <div class="form-group mb-3">
-                            <label for="correo">Correo</label>
-                            <input type="email" name="correo" id="correo" class="form-control" required="">
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="contrasena">Contraseña</label>
-                            <input type="password" name="contrasena" id="contrasena" class="form-control" required="">
-                        </div>
-                        <button type="submit" class="btn btn-primary w-100">Registrarse</button>
-                    </form>
-                </div>
+          <div class="col-lg-4">
+            <div class="payment-summary">
+              <h4>Payment Summary</h4>
+              <div class="summary-item d-flex justify-content-between">
+                <span>Subtotal</span>
+                <span>$3,097</span>
+              </div>
+              <div class="summary-item d-flex justify-content-between">
+                <span>Taxes</span>
+                <span>$247.76</span>
+              </div>
+              <hr>
+              <div class="summary-total d-flex justify-content-between">
+                <h5>Total</h5>
+                <h5>$3,344.76</h5>
+              </div>
+              <div class="mb-3">
+                <label for="nro-cliente" class="form-label">Nro. Cliente</label>
+                <input type="text" class="form-control" id="nro-cliente">
+              </div>
+              <div class="mb-3">
+                <label for="nro-cuenta" class="form-label">Nro. Cuenta</label>
+                <input type="text" class="form-control" id="nro-cuenta">
+              </div>
+              <button class="btn btn-primary w-100">Proceed to Payment</button>
             </div>
           </div>
         </div>
+
       </div>
 
-    </section><!-- /Travel Hero Section -->
-    
+    </section><!-- /Shopping Cart Section -->
 
   </main>
 
   <footer id="footer" class="footer position-relative dark-background">
+
 
     <div class="container footer-top">
       <div class="row gy-4">
@@ -162,7 +198,6 @@
 
       </div>
     </div>
-
   </footer>
 
   <!-- Scroll Top -->
