--- a/frontend/pages/register.html
+++ b/frontend/pages/register.html
@@ -91,7 +91,26 @@
           <div class="col-lg-5">
             <div class="booking-form-wrapper" data-aos="fade-left" data-aos-delay="200">
                 <div class="booking-form">
-                    <h3 class="form-title">Iniciar Sesión</h3>
+                    <h3 class="form-title">Registro</h3>
+                    <form action="" class="">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group mb-3">
+                                    <label for="nombres">Nombres</label>
+                                    <input type="text" name="nombres" id="nombres" class="form-control" required="">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group mb-3">
+                                    <label for="apellidos">Apellidos</label>
+                                    <input type="text" name="apellidos" id="apellidos" class="form-control" required="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="identificacion">Identificación</label>
+                            <input type="text" name="identificacion" id="identificacion" class="form-control" required="">
+                        </div>
                         <div class="form-group mb-3">
                             <label for="correo">Correo</label>
                             <input type="email" name="correo" id="correo" class="form-control" required="">
