--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -100,7 +100,7 @@
                             <label for="contrasena">Contraseña</label>
                             <input type="password" name="contrasena" id="contrasena" class="form-control" required="">
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Registrarse</button>
+                        <button type="submit" class="btn btn-primary w-100">Ingresar</button>
                     </form>
                 </div>
             </div>
