Botón flotante del carrito de compra

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,6 +57,8 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
+
+      <a class="btn-shopping-cart" href="pages/car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
       
       <a class="btn-getstarted" href="pages/register.html">Registrarse</a>
     </div>
