--- a/frontend/pages/about.html
+++ b/frontend/pages/about.html
@@ -57,6 +57,8 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
+      <a class="btn-shopping-cart" href="car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
+
       <a class="btn-getstarted" href="register.html">Registrarse</a>
 
     </div>
