--- a/frontend/pages/car.html
+++ b/frontend/pages/car.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="../assets/img/favicon.png" rel="icon">
-  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/assets/img/favicon.png" rel="icon">
+  <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,14 +18,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../vendor/aos/aos.css" rel="stylesheet">
-  <link href="../vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="../vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/vendor/aos/aos.css" rel="stylesheet">
+  <link href="/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="../css/main.css" rel="stylesheet">
+  <link href="/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Tour
@@ -41,26 +41,26 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+      <a href="/index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.webp" alt=""> -->
+        <!-- <img src="/assets/img/logo.webp" alt=""> -->
         <h1 class="sitename">WordlAgency</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="about.html">Sobre Nosotros</a></li>
-          <li><a href="destinations.html">Destinos</a></li>
-          <li><a href="tours.html">Tours</a></li>
-          <li><a href="login.html" class="active">Iniciar Sesión</a></li>
+          <li><a href="/index.html">Inicio</a></li>
+          <li><a href="/about.html">Sobre Nosotros</a></li>
+          <li><a href="/destinations.html">Destinos</a></li>
+          <li><a href="/tours.html">Tours</a></li>
+          <li><a href="/login.html" class="active">Iniciar Sesión</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-shopping-cart" href="car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
+      <a class="btn-shopping-cart" href="/car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
 
-      <a class="btn-getstarted" href="register.html">Registrarse</a>
+      <a class="btn-getstarted" href="/register.html">Registrarse</a>
 
     </div>
   </header>
@@ -68,7 +68,7 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" data-aos="fade" style="background-image: url(../assets/img/travel/showcase-8.webp);">
+    <div class="page-title dark-background" data-aos="fade" style="background-image: url(/assets/img/travel/showcase-8.webp);">
       <div class="container position-relative">
         <h1>Carrito de Compra</h1>
         <p>Mira tus reservas y realiza el pago.</p>
@@ -86,7 +86,7 @@
               <h2>Tours Seleccionados</h2>
               <div class="cart-item d-flex align-items-center justify-content-between">
                 <div class="item-details d-flex align-items-center">
-                  <img src="../assets/img/travel/tour-1.webp" alt="Tour Image" class="item-image">
+                  <img src="/assets/img/travel/tour-1.webp" alt="Tour Image" class="item-image">
                   <div>
                     <h5>Paris Romance</h5>
                     <p>5 Days, 4 Nights</p>
@@ -100,7 +100,7 @@
               </div>
               <div class="cart-item d-flex align-items-center justify-content-between">
                 <div class="item-details d-flex align-items-center">
-                  <img src="../assets/img/travel/tour-2.webp" alt="Tour Image" class="item-image">
+                  <img src="/assets/img/travel/tour-2.webp" alt="Tour Image" class="item-image">
                   <div>
                     <h5>Bali Adventure</h5>
                     <p>7 Days, 6 Nights</p>
@@ -112,7 +112,7 @@
                 <div class="item-price">$899</div>
                 <button class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></button>
               </div>
-              <a href="tours.html" class="btn btn-outline-primary mt-3"><i class="bi bi-plus-circle"></i> Add New Items</a>
+              <a href="/tours.html" class="btn btn-outline-primary mt-3"><i class="bi bi-plus-circle"></i> Add New Items</a>
             </div>
           </div>
           <div class="col-lg-4">
@@ -156,7 +156,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="../index.html" class="d-flex align-items-center">
+          <a href="/index.html" class="d-flex align-items-center">
             <span class="sitename">Tour</span>
           </a>
           <div class="footer-contact pt-3">
@@ -209,17 +209,17 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../vendor/php-email-form/validate.js"></script>
-  <script src="../vendor/aos/aos.js"></script>
-  <script src="../vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="../vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="../vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="../vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="../vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/vendor/php-email-form/validate.js"></script>
+  <script src="/vendor/aos/aos.js"></script>
+  <script src="/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="/vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="../js/main.js"></script>
+  <script src="/js/main.js"></script>
 
 </body>
 
