--- a/frontend/pages/destinations.html
+++ b/frontend/pages/destinations.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="../assets/img/favicon.png" rel="icon">
-  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/assets/img/favicon.png" rel="icon">
+  <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,14 +18,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../vendor/aos/aos.css" rel="stylesheet">
-  <link href="../vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="../vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/vendor/aos/aos.css" rel="stylesheet">
+  <link href="/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="../css/main.css" rel="stylesheet">
+  <link href="/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Tour
@@ -41,26 +41,26 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+      <a href="/index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.webp" alt=""> -->
+        <!-- <img src="/assets/img/logo.webp" alt=""> -->
         <h1 class="sitename">WordlAgency</h1>
       </a>
 
        <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="about.html">Sobre Nosotros</a></li>
-          <li><a href="destinations.html">Destinos</a></li>
-          <li><a href="tours.html">Tours</a></li>
-          <li><a href="login.html" class="active">Iniciar Sesión</a></li>
+          <li><a href="/index.html">Inicio</a></li>
+          <li><a href="/about.html">Sobre Nosotros</a></li>
+          <li><a href="/destinations.html">Destinos</a></li>
+          <li><a href="/tours.html">Tours</a></li>
+          <li><a href="/login.html" class="active">Iniciar Sesión</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-shopping-cart" href="car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
+      <a class="btn-shopping-cart" href="/car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
 
-      <a class="btn-getstarted" href="register.html">Registrarse</a>
+      <a class="btn-getstarted" href="/register.html">Registrarse</a>
 
     </div>
   </header>
@@ -68,13 +68,13 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" data-aos="fade" style="background-image: url(../assets/img/travel/showcase-8.webp);">
+    <div class="page-title dark-background" data-aos="fade" style="background-image: url(/assets/img/travel/showcase-8.webp);">
       <div class="container position-relative">
         <h1>Destinations</h1>
         <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li class="current">Destinations</li>
           </ol>
         </nav>
@@ -96,9 +96,9 @@
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
 
             <div class="col-lg-4 col-md-6 destination-item isotope-item filter-coastal">
-              <a href="destination-details.html" class="destination-tile">
+              <a href="/destination-details.html" class="destination-tile">
                 <div class="tile-image">
-                  <img src="../assets/img/travel/destination-2.webp" alt="Maldives" class="img-fluid" loading="lazy">
+                  <img src="/assets/img/travel/destination-2.webp" alt="Maldives" class="img-fluid" loading="lazy">
                   <div class="overlay-content">
                     <span class="destination-tag luxury">Elysian</span>
                     <div class="destination-info">
@@ -115,9 +115,9 @@
             </div><!-- End Destination Item -->
 
             <div class="col-lg-4 col-md-6 destination-item isotope-item filter-historical">
-              <a href="destination-details.html" class="destination-tile">
+              <a href="/destination-details.html" class="destination-tile">
                 <div class="tile-image">
-                  <img src="../assets/img/travel/destination-4.webp" alt="Rome, Italy" class="img-fluid" loading="lazy">
+                  <img src="/assets/img/travel/destination-4.webp" alt="Rome, Italy" class="img-fluid" loading="lazy">
                   <div class="overlay-content">
                     <span class="destination-tag cultural">Historic</span>
                     <div class="destination-info">
@@ -145,7 +145,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="../index.html" class="d-flex align-items-center">
+          <a href="/index.html" class="d-flex align-items-center">
             <span class="sitename">Tour</span>
           </a>
           <div class="footer-contact pt-3">
@@ -199,17 +199,17 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../vendor/php-email-form/validate.js"></script>
-  <script src="../vendor/aos/aos.js"></script>
-  <script src="../vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="../vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="../vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="../vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="../vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/vendor/php-email-form/validate.js"></script>
+  <script src="/vendor/aos/aos.js"></script>
+  <script src="/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="/vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="../js/main.js"></script>
+  <script src="/js/main.js"></script>
 
 </body>
 
