--- a/frontend/pages/admin.html
+++ b/frontend/pages/admin.html
@@ -357,7 +357,7 @@
   <script src="/vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="/js/main.js"></script>
+  <script src="./public/js/main.js"></script>
 
   <script>
     document.addEventListener('DOMContentLoaded', function () {
