--- a/frontend/pages/destinations.html
+++ b/frontend/pages/destinations.html
@@ -209,7 +209,7 @@
   <script src="/vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="/js/main.js"></script>
+  <script src="./public/js/main.js"></script>
 
 </body>
 
