--- a/frontend/pages/admin.html
+++ b/frontend/pages/admin.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="../public//assets/img/favicon.png" rel="icon">
-  <link href="../public//assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,12 +18,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../public/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../public/vendor/aos/aos.css" rel="stylesheet">
-  <link href="../public/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="../public/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-
+  <link href="../public//vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../public//vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../public//vendor/aos/aos.css" rel="stylesheet">
+  <link href="../public//vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../public//vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <!-- Main CSS File -->
   <link href="../css/main.css" rel="stylesheet">
 
@@ -34,10 +33,9 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
- 
 </head>
 
-<body class="page-404">
+<body class="about-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
@@ -48,18 +46,18 @@
         <h1 class="sitename">WordlAgency</h1>
       </a>
 
-      <nav id="navmenu" class="navmenu">
+       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="../index.html">Inicio</a></li>
           <li><a href="/pages/about.html">Sobre Nosotros</a></li>
           <li><a href="/pages/destinations.html">Destinos</a></li>
           <li><a href="/pages/tours.html">Tours</a></li>
-          <li><a href="/pages/login.html">Iniciar Sesión</a></li>
-          <li><a href="/pages/admin.html" class="active">Admin</a></li>
+          <li><a href="/pages/login.html" class="active">Iniciar Sesión</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
+      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
 
       <a class="btn-getstarted" href="/pages/register.html">Registrarse</a>
 
