--- a/frontend/pages/destinations.html
+++ b/frontend/pages/destinations.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
 
-  <!-- Favicons -->
+<!-- Favicons -->
   <link href="../assets/img/favicon.png" rel="icon">
   <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
@@ -18,11 +18,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="./public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="./public/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="./public/vendor/aos/aos.css" rel="stylesheet">
-  <link href="./public/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="./public/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../public/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../public/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../public/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../public/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
   <link href="../css/main.css" rel="stylesheet">
@@ -37,6 +37,45 @@
 </head>
 
 <body class="destinations-page">
+
+  <header id="header" class="header d-flex align-items-center fixed-top">
+    <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+
+      <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <!-- <img src="/assets/img/logo.webp" alt=""> -->
+        <h1 class="sitename">WordlAgency</h1>
+      </a>
+
+       <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="/pages/about.html">Sobre Nosotros</a></li>
+          <li><a href="/pages/destinations.html">Destinos</a></li>
+          <li><a href="/pages/tours.html">Tours</a></li>
+          <li><a href="/pages/login.html" class="active">Iniciar Sesión</a></li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+      </nav>
+
+      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
+
+      <a class="btn-getstarted" href="/pages/register.html">Registrarse</a>
+
+    </div>
+  </header>
+
+
+  <!-- =======================================================
+  * Template Name: Tour
+  * Template URL: https://bootstrapmade.com/tour-bootstrap-travel-website-template/
+  * Updated: Jul 01 2025 with Bootstrap v5.3.7
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+</head>
+
+<body class="about-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
@@ -100,10 +139,10 @@
                 <div class="tile-image">
                   <img src="../assets/img/travel/destination-2.webp" alt="Maldives" class="img-fluid" loading="lazy">
                   <div class="overlay-content">
-                    <span class="destination-tag luxury">Elysian</span>
+                    <span class="destination-tag luxury">Tour</span>
                     <div class="destination-info">
-                      <h4>Maldives</h4>
-                      <p>A cluster of idyllic islands, boasting sapphire waters and charming overwater retreats.</p>
+                      <h4>San Juan</h4>
+                      <p>Visita lo más puro de la capital ed Puerto Rico</p>
                       <div class="destination-stats">
                         <span class="tours-available"><i class="bi bi-map"></i> 15 Escapes</span>
                         <span class="starting-price">From $2,450</span>
@@ -119,10 +158,10 @@
                 <div class="tile-image">
                   <img src="../assets/img/travel/destination-4.webp" alt="Rome, Italy" class="img-fluid" loading="lazy">
                   <div class="overlay-content">
-                    <span class="destination-tag cultural">Historic</span>
+                    <span class="destination-tag cultural">Historico</span>
                     <div class="destination-info">
-                      <h4>Rome, Italy</h4>
-                      <p>The timeless city, where ancient ruins meet breathtaking Renaissance artistry.</p>
+                      <h4>Guayaquil</h4>
+                      <p>Disfruta, la época colonial de Guayaquil .</p>
                       <div class="destination-stats">
                         <span class="tours-available"><i class="bi bi-map"></i> 18 Excursions</span>
                         <span class="starting-price">From $1,320</span>
@@ -199,17 +238,17 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="./public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="./public/vendor/php-email-form/validate.js"></script>
-  <script src="./public/vendor/aos/aos.js"></script>
-  <script src="./public/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="./public/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="./public/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="./public/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="./public/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../public/vendor/php-email-form/validate.js"></script>
+  <script src="../public/vendor/aos/aos.js"></script>
+  <script src="../public/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../public/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../public/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../public/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="../public/vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="./public/js/main.js"></script>
+  <script src="../public/js/main.js"></script>
 
 </body>
 
