--- a/frontend/pages/register.html
+++ b/frontend/pages/register.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
 
-  <!-- Favicons -->
+<!-- Favicons -->
   <link href="../assets/img/favicon.png" rel="icon">
   <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
@@ -25,7 +25,7 @@
   <link href="../public/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="/..css/main.css" rel="stylesheet">
+  <link href="../css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Tour
@@ -65,6 +65,7 @@
     </div>
   </header>
 
+
   <main class="main">
 
     <!-- Travel Hero Section -->
@@ -72,7 +73,7 @@
 
       <div class="hero-background">
         <video autoplay="" muted="" loop="">
-          <source src="/assets/img/travel/video-2.mp4" type="video/mp4">
+          <source src="../assets/img/travel/video-2.mp4" type="video/mp4">
         </video>
         <div class="hero-overlay"></div>
       </div>
