--- a/frontend/pages/tours.html
+++ b/frontend/pages/tours.html
@@ -25,7 +25,46 @@
   <link href="../public/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="/..css/main.css" rel="stylesheet">
+  <link href="../css/main.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: Tour
+  * Template URL: https://bootstrapmade.com/tour-bootstrap-travel-website-template/
+  * Updated: Jul 01 2025 with Bootstrap v5.3.7
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+</head>
+
+<body class="destinations-page">
+
+  <header id="header" class="header d-flex align-items-center fixed-top">
+    <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+
+      <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <!-- <img src="/assets/img/logo.webp" alt=""> -->
+        <h1 class="sitename">WordlAgency</h1>
+      </a>
+
+       <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="/pages/about.html">Sobre Nosotros</a></li>
+          <li><a href="/pages/destinations.html">Destinos</a></li>
+          <li><a href="/pages/tours.html">Tours</a></li>
+          <li><a href="/pages/login.html" class="active">Iniciar Sesión</a></li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+      </nav>
+
+      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span class="badge bg-danger">2</span></a>
+
+      <a class="btn-getstarted" href="/pages/register.html">Registrarse</a>
+
+    </div>
+  </header>
+
 
   <!-- =======================================================
   * Template Name: Tour
