Cambios para pruebas con el back

--- a/pages/tours.html
+++ b/pages/tours.html
@@ -135,12 +135,15 @@
 
         <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="row" id="tours-list">
+          <div class="row">
             <div class="col-lg-8 mx-auto text-center mb-5">
               <h2>Find Your Perfect Tour</h2>
               <p>Discover unforgettable travel experiences with our curated collection of tours. Explore by destination,
                 travel style, or date to find the adventure that's perfect for you.</p>
             </div>
+          </div>
+
+          <div class="row" id="tours-list">
           </div>
 
           <!-- Tour Filters -->
