--- a/pages/tours.html
+++ b/pages/tours.html
@@ -119,8 +119,8 @@
         style="background-image: url(/assets/img/travel/showcase-8.webp);">
         <div class="container position-relative">
           <h1>Tours</h1>
-          <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam
-            molestias.</p>
+          <p>Los lugares más hermosos del planeta en un solo lugar
+          </p>
           <nav class="breadcrumbs">
             <ol>
               <li><a href="../index.html">Home</a></li>
@@ -152,28 +152,28 @@
                 <div class="row">
                   <div class="col-lg-3 col-md-6 mb-3">
                     <select class="form-select" id="filter-destination" aria-label="Select Destination">
-                      <option value="">Select Destination</option>
+                      <option value="">Elegir destino</option>
                       <option value="paris">Guayaquil</option>
                       <option value="bali">San Juan</option>
                     </select>
                   </div>
                   <div class="col-lg-3 col-md-6 mb-3">
                     <select class="form-select" id="filter-type" aria-label="Tour Type">
-                      <option value="">Tour Type</option>
+                      <option value="">Tipo de Tour</option>
                       <option value="adventure">Interior</option>
-                      <option value="luxury">Exterior</option>
+                      <option value="luxury">Aire Libre</option>
                     </select>
                   </div>
                   <div class="col-lg-3 col-md-6 mb-3">
                     <select class="form-select" id="filter-duration" aria-label="Duration">
-                      <option value="">Duration</option>
+                      <option value="">Duración</option>
                       <option value="1-3">1-3 Horas</option>
                       <option value="4-7">4-8 Horas</option>
                     </select>
                   </div>
                   <div class="col-lg-3 col-md-6 mb-3">
                     <select class="form-select" id="filter-price" aria-label="Price Range">
-                      <option value="">Price Range</option>
+                      <option value="">Rango Precio</option>
                       <option value="0-500">$20 - $50</option>
                       <option value="0-500">$60 - $100</option>
                     </select>
