Cambios footer páginas y pagina user

--- a/pages/about.html
+++ b/pages/about.html
@@ -74,13 +74,12 @@
     <div class="page-title dark-background" data-aos="fade"
       style="background-image: url(/assets/img/travel/showcase-8.webp);">
       <div class="container position-relative">
-        <h1>About</h1>
-        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam
-          molestias.</p>
+        <h1>Sobre Nosotros</h1>
+        <p>Empresa Líder en Latinoamérica en viajes y tours para la mejor experiencia</p>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="../index.html">Home</a></li>
-            <li class="current">About</li>
+            <li><a href="../index.html">Inicio</a></li>
+            <li class="current">Sobre Nosotros</li>
           </ol>
         </nav>
       </div>
@@ -94,9 +93,10 @@
         <div class="row">
           <div class="col-lg-8 mx-auto text-center mb-5">
             <div class="intro-content" data-aos="fade-up" data-aos-delay="200">
-              <h2>Redefining Travel,<br>One Adventure at a Time</h2>
-              <p class="lead">Born from a love of exploration and discovery, we've spent the last decade turning
-                wanderlust into life-changing experiences for adventurous souls around the globe.</p>
+              <h2>Redefiniendo los Viajes<br>Un viaje a la vez</h2>
+              <p class="lead">Nacido de un amor por la exploración y la descubrimiento, hemos pasado los últimos diez
+                años transformando el deseo de viajar en experiencias de vida para las almas aventuradas por todo el
+                mundo.</p>
             </div>
           </div>
         </div>
@@ -107,12 +107,12 @@
               <img src="../assets/img/travel/showcase-7.webp" class="img-fluid" alt="Travel Adventure">
               <div class="floating-stats">
                 <div class="stat-item">
-                  <span class="number">50+</span>
-                  <span class="label">Countries</span>
+                  <span class="number">2</span>
+                  <span class="label">Países</span>
                 </div>
                 <div class="stat-item">
                   <span class="number">15K</span>
-                  <span class="label">Happy Travelers</span>
+                  <span class="label">Viajeros felices</span>
                 </div>
               </div>
             </div>
@@ -122,24 +122,25 @@
             <div class="story-content">
               <div class="story-badge">
                 <i class="bi bi-compass"></i>
-                <span>Our Story</span>
+                <span>Nuestra Historia</span>
               </div>
-              <h3>Where Passion Meets Purpose</h3>
-              <p>What started as weekend camping trips among college friends has evolved into a global network of travel
-                enthusiasts dedicated to creating extraordinary journeys. We believe travel isn't just about seeing new
-                places – it's about connecting with cultures, supporting communities, and discovering parts of yourself
-                you never knew existed.</p>
-              <p>Every expedition we craft is infused with respect for local traditions and a commitment to leaving
-                places better than we found them. Our team of cultural ambassadors and adventure specialists work
-                hand-in-hand with indigenous guides to offer you authentic experiences that most tourists never see.</p>
+              <h3>Donde la Pasión Se Encuentra con el Propósito</h3>
+              <p>Lo que comenzó como viajes de fin de semana entre amigos de la universidad se ha convertido en una red
+                global de entusiastas de viajar dedicados a crear viajes extraordinarios. Creemos que viajar no es solo
+                sobre ver nuevos lugares – es sobre conectar con las culturas, apoyar las comunidades y descubrir partes
+                de ti mismo que nunca sabías existían.</p>
+              <p>Cada viaje que creamos está infundido con respeto por las tradiciones locales y un compromiso de dejar
+                los lugares mejores que encontramos. Nuestro equipo de embajadores culturales y especialistas en
+                aventuras trabaja mano a mano con guías indígenas para ofrecerte experiencias auténticas que la mayoría
+                de los turistas nunca ven.</p>
 
               <div class="mission-box">
                 <div class="mission-icon">
                   <i class="bi bi-globe-americas"></i>
                 </div>
                 <div class="mission-text">
-                  <h4>Our Vision</h4>
-                  <p>"To make the world more connected and compassionate, one meaningful journey at a time."</p>
+                  <h4>Nuestra Visión</h4>
+                  <p>"Hacer que el mundo sea más conectado y compasivo, una viaje significativo a la vez."</p>
                 </div>
               </div>
             </div>
@@ -150,8 +151,8 @@
           <div class="col-lg-12">
             <div class="features-grid" data-aos="fade-up" data-aos-delay="200">
               <div class="section-header text-center mb-5">
-                <h3>What Makes Us Different</h3>
-                <p>Six pillars that define every adventure we create</p>
+                <h3>Qué Nos Hace Diferentes</h3>
+                <p>Seis pilares que definen cada aventura que creamos</p>
               </div>
 
               <div class="row g-4">
@@ -161,12 +162,12 @@
                       <div class="feature-icon">
                         <i class="bi bi-people"></i>
                       </div>
-                      <h4>Local Partnerships</h4>
-                      <p>Direct collaboration with indigenous communities</p>
+                      <h4>Partnerships locales</h4>
+                      <p>Colaboración directa con comunidades indígenas</p>
                     </div>
                     <div class="feature-back">
-                      <p>We work exclusively with local guides who are passionate storytellers and cultural ambassadors,
-                        ensuring authentic experiences while supporting local economies.</p>
+                      <p>Trabajamos exclusivamente con guías locales que son narradores pasionales y embajadores
+                        culturales, asegurando experiencias auténticas mientras apoyamos las economías locales.</p>
                     </div>
                   </div>
                 </div>
@@ -177,12 +178,12 @@
                       <div class="feature-icon">
                         <i class="bi bi-heart-pulse"></i>
                       </div>
-                      <h4>Safety First</h4>
-                      <p>Comprehensive safety protocols and emergency support</p>
+                      <h4>Primera seguridad</h4>
+                      <p>Protocolos de seguridad completos y apoyo de emergencia</p>
                     </div>
                     <div class="feature-back">
-                      <p>From pre-trip safety briefings to 24/7 emergency response teams, your wellbeing is our top
-                        priority on every single adventure.</p>
+                      <p>Desde las conferencias de seguridad previas hasta los equipos de respuesta de emergencia 24/7,
+                        tu bienestar es nuestra prioridad máxima en cada aventura.</p>
                     </div>
                   </div>
                 </div>
@@ -193,12 +194,12 @@
                       <div class="feature-icon">
                         <i class="bi bi-recycle"></i>
                       </div>
-                      <h4>Carbon Conscious</h4>
-                      <p>Offsetting 150% of travel emissions</p>
+                      <h4>Consciente de carbono</h4>
+                      <p>Offsetting 150% de las emisiones de viaje</p>
                     </div>
                     <div class="feature-back">
-                      <p>Through reforestation projects and renewable energy investments, we ensure every trip
-                        contributes positively to environmental restoration.</p>
+                      <p>Con proyectos de reforestación y inversiones en energía renovable, aseguramos que cada viaje
+                        contribuya positivamente a la restauración ambiental.</p>
                     </div>
                   </div>
                 </div>
@@ -209,12 +210,12 @@
                       <div class="feature-icon">
                         <i class="bi bi-sliders"></i>
                       </div>
-                      <h4>Tailored Itineraries</h4>
-                      <p>Adventures designed around your interests</p>
+                      <h4>Itinerarios personalizados</h4>
+                      <p>Adventuras diseñadas alrededor de tus intereses</p>
                     </div>
                     <div class="feature-back">
-                      <p>No cookie-cutter tours here. Every itinerary is customized based on your travel style, fitness
-                        level, and personal interests.</p>
+                      <p>No tours de un solo plato aquí. Cada itinerario se personaliza basado en tu estilo de viaje,
+                        nivel de fitness y tus intereses personales.</p>
                     </div>
                   </div>
                 </div>
@@ -225,12 +226,12 @@
                       <div class="feature-icon">
                         <i class="bi bi-shield-check"></i>
                       </div>
-                      <h4>Flexible Policies</h4>
-                      <p>Life happens, we understand</p>
+                      <h4>Políticas flexibles</h4>
+                      <p>Vida ocurre, entendemos</p>
                     </div>
                     <div class="feature-back">
-                      <p>Free cancellation up to 30 days before departure, easy date changes, and comprehensive travel
-                        insurance options give you peace of mind.</p>
+                      <p>Cancelación gratuita hasta 30 días antes del viaje, cambios de fecha fáciles y opciones de
+                        seguro de viaje completas te dan tranquilidad.</p>
                     </div>
                   </div>
                 </div>
@@ -241,12 +242,12 @@
                       <div class="feature-icon">
                         <i class="bi bi-star"></i>
                       </div>
-                      <h4>Lifetime Memories</h4>
-                      <p>Experiences that transform perspectives</p>
+                      <h4>Memorias de vida</h4>
+                      <p>Experiencias que transforman perspectivas</p>
                     </div>
                     <div class="feature-back">
-                      <p>Our travelers often say their journey with us changed their outlook on life. We create moments
-                        that become treasured memories for years to come.</p>
+                      <p>Nuestros viajeros a menudo dicen que su viaje con nosotros cambió su perspectiva sobre la vida.
+                        Creamos momentos que se convierten en recuerdos preciosos durante años.</p>
                     </div>
                   </div>
                 </div>
@@ -262,43 +263,35 @@
   </main>
 
   <footer id="footer" class="footer position-relative dark-background">
+
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="../index.html" class="d-flex align-items-center">
+          <a href="index.html" class="d-flex align-items-center">
             <span class="sitename">Tour</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>Av. 9 de Octubre</p>
+            <p>Guayaquil, Ecuador</p>
+            <p class="mt-3"><strong>Teléfono:</strong> <span>+593 987654321</span></p>
+            <p><strong>Correo:</strong> <span>wordlagency@gmail.com</span></p>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Inicio</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Sobre Nosotros</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Destinos</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Tours</a></li>
           </ul>
         </div>
 
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
-          <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
-          </ul>
-        </div>
 
         <div class="col-lg-4 col-md-12">
-          <h4>Follow Us</h4>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+          <h4>Síguenos</h4>
+          <p>Nuestros canales de redes sociales</p>
           <div class="social-links d-flex">
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
@@ -310,6 +303,7 @@
       </div>
     </div>
   </footer>
+
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
