--- a/pages/destinations.html
+++ b/pages/destinations.html
@@ -116,13 +116,11 @@
       <div class="page-title dark-background" data-aos="fade"
         style="background-image: url(/assets/img/travel/showcase-8.webp);">
         <div class="container position-relative">
-          <h1>Destinations</h1>
-          <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam
-            molestias.</p>
+          <h1>Destinos</h1>
           <nav class="breadcrumbs">
             <ol>
-              <li><a href="../index.html">Home</a></li>
-              <li class="current">Destinations</li>
+              <li><a href="../index.html">Inicio</a></li>
+              <li class="current">Destinos</li>
             </ol>
           </nav>
         </div>
@@ -135,10 +133,8 @@
 
           <div class="row">
             <div class="col-lg-8 mx-auto text-center">
-              <h2>Uncover Captivating Travel Experiences</h2>
-              <p class="mb-5">From the bustling energy of cosmopolitan cities to the serene embrace of untouched
-                wilderness, embark on incredible journeys to the planet's most enchanting destinations. We're here to
-                help you craft memories that will last a lifetime.</p>
+              <h2>Atrapa Experiencias en Aventuras Inolvidables</h2>
+              <p class="mb-5">Descubre las ciudades más hermosas de Latinoamérica.</p>
             </div>
           </div>
 
@@ -147,15 +143,15 @@
             <div class="col-lg-4 col-md-6 destination-item isotope-item filter-coastal">
               <a href="destination-details.html" class="destination-tile">
                 <div class="tile-image">
-                  <img src="../assets/img/travel/destination-2.webp" alt="Maldives" class="img-fluid" loading="lazy">
+                  <img src="../assets/img/travel/sanjuan.jpg" alt="Maldives" class="img-fluid" loading="lazy">
                   <div class="overlay-content">
                     <span class="destination-tag luxury">Tour</span>
                     <div class="destination-info">
                       <h4>San Juan</h4>
                       <p>Visita lo más puro de la capital ed Puerto Rico</p>
                       <div class="destination-stats">
-                        <span class="tours-available"><i class="bi bi-map"></i> 15 Escapes</span>
-                        <span class="starting-price">From $2,450</span>
+                        <span class="tours-available"><i class="bi bi-map"></i> 4 Escursiones</span>
+                        <span class="starting-price">Desde $20</span>
                       </div>
                     </div>
                   </div>
@@ -166,15 +162,15 @@
             <div class="col-lg-4 col-md-6 destination-item isotope-item filter-historical">
               <a href="destination-details.html" class="destination-tile">
                 <div class="tile-image">
-                  <img src="../assets/img/travel/destination-4.webp" alt="Rome, Italy" class="img-fluid" loading="lazy">
+                  <img src="../assets/img/travel/guayaquil.jpg" alt="Rome, Italy" class="img-fluid" loading="lazy">
                   <div class="overlay-content">
                     <span class="destination-tag cultural">Historico</span>
                     <div class="destination-info">
                       <h4>Guayaquil</h4>
                       <p>Disfruta, la época colonial de Guayaquil .</p>
                       <div class="destination-stats">
-                        <span class="tours-available"><i class="bi bi-map"></i> 18 Excursions</span>
-                        <span class="starting-price">From $1,320</span>
+                        <span class="tours-available"><i class="bi bi-map"></i> 4 Escursiones</span>
+                        <span class="starting-price">Desde $20</span>
                       </div>
                     </div>
                   </div>
@@ -194,40 +190,31 @@
       <div class="container footer-top">
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6 footer-about">
-            <a href="../index.html" class="d-flex align-items-center">
+            <a href="index.html" class="d-flex align-items-center">
               <span class="sitename">Tour</span>
             </a>
             <div class="footer-contact pt-3">
-              <p>A108 Adam Street</p>
-              <p>New York, NY 535022</p>
-              <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-              <p><strong>Email:</strong> <span>info@example.com</span></p>
+              <p>Av. 9 de Octubre</p>
+              <p>Guayaquil, Ecuador</p>
+              <p class="mt-3"><strong>Teléfono:</strong> <span>+593 987654321</span></p>
+              <p><strong>Correo:</strong> <span>wordlagency@gmail.com</span></p>
             </div>
           </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Inicio</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Sobre Nosotros</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Destinos</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Tours</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
-            </ul>
-          </div>
 
           <div class="col-lg-4 col-md-12">
-            <h4>Follow Us</h4>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+            <h4>Síguenos</h4>
+            <p>Nuestros canales de redes sociales</p>
             <div class="social-links d-flex">
               <a href=""><i class="bi bi-twitter-x"></i></a>
               <a href=""><i class="bi bi-facebook"></i></a>
@@ -238,8 +225,8 @@
 
         </div>
       </div>
-
     </footer>
+
 
     <!-- Scroll Top -->
     <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
