--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
         <div class="row align-items-center">
           <div class="col-lg-7">
             <div class="hero-text" data-aos="fade-up" data-aos-delay="100">
-              <h1 class="hero-title">Discover Your Perfect Journey</h1>
-              <p class="hero-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+              <h1 class="hero-title">Descubre Tú Viaje Perfecto </h1>
+              <p class="hero-subtitle">Las experiencias inolvidables están a solo un clic.</p>
               <div class="hero-buttons">
                 <a href="#" class="btn btn-primary me-3">Destinos</a>
                 <a href="#" class="btn btn-outline">Tours</a>
@@ -97,19 +96,19 @@
           <div class="col-lg-5">
             <div class="booking-form-wrapper" data-aos="fade-left" data-aos-delay="200">
               <div class="booking-form">
-                <h3 class="form-title">Plan Your Adventure</h3>
+                <h3 class="form-title">Planea Tu Viaje</h3>
                 <form action="" class="">
                   <div class="form-group mb-3">
-                    <label for="destination">Destination</label>
+                    <label for="destination">Destinos</label>
                     <select name="destination" id="destination" class="form-select" required="">
-                      <option value="">Choose your destination</option>
+                      <option value="">Elige tu destino</option>
                     </select>
                   </div>
 
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group mb-3">
-                        <label for="checkin">Departure Date</label>
+                        <label for="checkin">Fecha de Salida</label>
                         <input type="date" name="checkin" id="checkin" class="form-control" required="">
                       </div>
                     </div>
@@ -118,23 +117,23 @@
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group mb-3">
-                        <label for="adults">Adults</label>
+                        <label for="adults">Adultos</label>
                         <select name="adults" id="adults" class="form-select" required="">
-                          <option value="1">1 Adult</option>
-                          <option value="2">2 Adults</option>
-                          <option value="3">3 Adults</option>
-                          <option value="4">4+ Adults</option>
+                          <option value="1">1 Adulto</option>
+                          <option value="2">2 Adultos</option>
+                          <option value="3">3 Adultos</option>
+                          <option value="4">4+ Adultos</option>
                         </select>
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="form-group mb-3">
-                        <label for="children">Children</label>
+                        <label for="children">Niños</label>
                         <select name="children" id="children" class="form-select">
-                          <option value="0">No Children</option>
-                          <option value="1">1 Child</option>
-                          <option value="2">2 Children</option>
-                          <option value="3">3+ Children</option>
+                          <option value="0">No Niños</option>
+                          <option value="1">1 Niño</option>
+                          <option value="2">2 Niños</option>
+                          <option value="3">3+ Niños</option>
                         </select>
                       </div>
                     </div>
@@ -158,9 +157,8 @@
         <div class="why-choose-section">
           <div class="row justify-content-center">
             <div class="col-lg-8 text-center mb-5" data-aos="fade-up" data-aos-delay="100">
-              <h3>Why Choose Us for Your Next Adventure</h3>
-              <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                nostrud exercitation ullamco laboris.</p>
+              <h3>Porque Elegirnos Para Tú Próxima Aventura</h3>
+              <p>Somos una agencia de viajes con mucha experiencia en el mercado y confianza con nuestros clientes.</p>
             </div>
           </div>
 
@@ -170,9 +168,8 @@
                 <div class="feature-icon">
                   <i class="bi bi-people-fill"></i>
                 </div>
-                <h4>Local Experts</h4>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
-                  totam.</p>
+                <h4>Experots Locales</h4>
+                <p>Contamos con expertos locales que te ayudarán a planificar tu viaje.</p>
               </div>
             </div>
 
@@ -181,8 +178,8 @@
                 <div class="feature-icon">
                   <i class="bi bi-shield-check"></i>
                 </div>
-                <h4>Safe &amp; Secure</h4>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum.</p>
+                <h4>Salvo &amp; Seguro</h4>
+                <p>Aseguramos tus viajes con la mejor cobertura.</p>
               </div>
             </div>
 
@@ -191,8 +188,8 @@
                 <div class="feature-icon">
                   <i class="bi bi-cash"></i>
                 </div>
-                <h4>Best Prices</h4>
-                <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet consectetur adipisci velit.</p>
+                <h4>Mejores Precios</h4>
+                <p>Contamos con los mejores precios para tus viajes.</p>
               </div>
             </div>
           </div><!-- End Features Grid -->
@@ -207,8 +204,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Featured Destinations</h2>
-        <div><span>Check Our</span> <span class="description-title">Featured Destinations</span></div>
+        <h2>Destinos Destacados</h2>
+        <div><span>Conoce</span> <span class="description-title">Destinos Destacados</span></div>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -234,36 +231,27 @@
             <span class="sitename">Tour</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>Av. 9 de Octubre</p>
+            <p>Guayaquil, Ecuador</p>
+            <p class="mt-3"><strong>Teléfono:</strong> <span>+593 987654321</span></p>
+            <p><strong>Correo:</strong> <span>wordlagency@gmail.com</span></p>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Inicio</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Sobre Nosotros</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Destinos</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Tours</a></li>
           </ul>
         </div>
 
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
-          <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
-          </ul>
-        </div>
 
         <div class="col-lg-4 col-md-12">
-          <h4>Follow Us</h4>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+          <h4>Síguenos</h4>
+          <p>Nuestros canales de redes sociales</p>
           <div class="social-links d-flex">
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
@@ -274,18 +262,6 @@
 
       </div>
     </div>
-
-    <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">MyWebsite</strong> <span>All Rights Reserved</span></p>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-
   </footer>
 
   <!-- Scroll Top -->
