--- a/pages/tours.html
+++ b/pages/tours.html
@@ -53,7 +53,6 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="../index.html">Inicio</a></li>
-          <li><a href="../index.html">Inicio</a></li>
           <li><a href="about.html">Sobre Nosotros</a></li>
           <li><a href="destinations.html">Destinos</a></li>
           <li><a href="tours.html">Tours</a></li>
@@ -157,40 +156,31 @@
       <div class="container footer-top">
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6 footer-about">
-            <a href="../index.html" class="d-flex align-items-center">
+            <a href="index.html" class="d-flex align-items-center">
               <span class="sitename">Tour</span>
             </a>
             <div class="footer-contact pt-3">
-              <p>A108 Adam Street</p>
-              <p>New York, NY 535022</p>
-              <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-              <p><strong>Email:</strong> <span>info@example.com</span></p>
+              <p>Av. 9 de Octubre</p>
+              <p>Guayaquil, Ecuador</p>
+              <p class="mt-3"><strong>Teléfono:</strong> <span>+593 987654321</span></p>
+              <p><strong>Correo:</strong> <span>wordlagency@gmail.com</span></p>
             </div>
           </div>
 
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Inicio</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Sobre Nosotros</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Destinos</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Tours</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
-            </ul>
-          </div>
 
           <div class="col-lg-4 col-md-12">
-            <h4>Follow Us</h4>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+            <h4>Síguenos</h4>
+            <p>Nuestros canales de redes sociales</p>
             <div class="social-links d-flex">
               <a href=""><i class="bi bi-twitter-x"></i></a>
               <a href=""><i class="bi bi-facebook"></i></a>
@@ -201,9 +191,8 @@
 
         </div>
       </div>
-
-
     </footer>
+
 
     <!-- Scroll Top -->
     <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
