Cambios en el index y tours par el funcionamiento del carrito y elección de precios

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <div class="feature-icon">
                   <i class="bi bi-people-fill"></i>
                 </div>
-                <h4>Experots Locales</h4>
+                <h4>Expertos Locales</h4>
                 <p>Contamos con expertos locales que te ayudarán a planificar tu viaje.</p>
               </div>
             </div>
