Cambios en los usuario, registro y funcionamiento total el carrito de compra

--- a/pages/car.html
+++ b/pages/car.html
@@ -203,6 +203,7 @@
 
     <!-- Cart Logic -->
     <script type="module" src="../src/controllers/CartController.js"></script>
+    <script type="module" src="../src/controllers/AuthController.js"></script>
 
 </body>
 
