--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
   <!-- Main JS File -->
   <script src="js/main.js"></script>
   <script type="module" src="src/controllers/ToursController.js"></script>
+  <script type="module" src="src/controllers/AuthController.js"></script>
 
 </body>
 
