--- a/pages/login.html
+++ b/pages/login.html
@@ -99,15 +99,16 @@
             <div class="booking-form-wrapper" data-aos="fade-left" data-aos-delay="200">
               <div class="booking-form">
                 <h3 class="form-title">Iniciar Sesión</h3>
-                <div class="form-group mb-3">
-                  <label for="correo">Correo</label>
-                  <input type="email" name="correo" id="correo" class="form-control" required="">
-                </div>
-                <div class="form-group mb-3">
-                  <label for="contrasena">Contraseña</label>
-                  <input type="password" name="contrasena" id="contrasena" class="form-control" required="">
-                </div>
-                <button type="submit" class="btn btn-primary w-100">Ingresar</button>
+                <form id="login-form" action="" class="">
+                  <div class="form-group mb-3">
+                    <label for="correo">Correo</label>
+                    <input type="email" name="correo" id="correo" class="form-control" required="">
+                  </div>
+                  <div class="form-group mb-3">
+                    <label for="contrasena">Contraseña</label>
+                    <input type="password" name="contrasena" id="contrasena" class="form-control" required="">
+                  </div>
+                  <button type="submit" class="btn btn-primary w-100">Ingresar</button>
                 </form>
               </div>
             </div>
