--- a/pages/register.html
+++ b/pages/register.html
@@ -101,7 +101,7 @@
             <div class="booking-form-wrapper" data-aos="fade-left" data-aos-delay="200">
               <div class="booking-form">
                 <h3 class="form-title">Registro</h3>
-                <form action="" class="">
+                <form id="register-form" action="" class="">
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group mb-3">
