--- a/pages/tours.html
+++ b/pages/tours.html
@@ -214,6 +214,7 @@
     <!-- Main JS File -->
     <script src="../js/main.js"></script>
     <script type="module" src="../src/controllers/ToursController.js"></script>
+    <script type="module" src="../src/controllers/AuthController.js"></script>
 
   </body>
 
