--- a/pages/user.html
+++ b/pages/user.html
@@ -259,6 +259,200 @@
   <script src="../vendor/php-email-form/validate.js"></script>
   <script src="../vendor/aos/aos.js"></script>
   <script src="../vendor/purecounter/purecounter_vanilla.js"></script>
+  </div>
+  </header>
+
+
+  <main class="main">
+
+    <!-- Page Title -->
+    <div class="page-title dark-background" data-aos="fade"
+      style="background-image: url(/assets/img/travel/showcase-8.webp);">
+      <div class="container position-relative">
+        <h1>User Profile</h1>
+        <p>Manage your profile, reservations, and payment history.</p>
+        <nav class="breadcrumbs">
+          <ol>
+            <li><a href="../index.html">Home</a></li>
+            <li class="current">User Profile</li>
+          </ol>
+        </nav>
+      </div>
+    </div><!-- End Page Title -->
+
+    <!-- User Profile Section -->
+    <section id="user-profile" class="user-profile-section section">
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row">
+          <div class="col-lg-3">
+            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+              <a class="nav-link active" id="v-pills-profile-tab" data-bs-toggle="pill" href="#v-pills-profile"
+                role="tab" aria-controls="v-pills-profile" aria-selected="true">Profile Settings</a>
+              <a class="nav-link" id="v-pills-reservations-tab" data-bs-toggle="pill" href="#v-pills-reservations"
+                role="tab" aria-controls="v-pills-reservations" aria-selected="false">My Reservations</a>
+              <a class="nav-link" id="v-pills-payments-tab" data-bs-toggle="pill" href="#v-pills-payments" role="tab"
+                aria-controls="v-pills-payments" aria-selected="false">Payment History</a>
+            </div>
+          </div>
+          <div class="col-lg-9">
+            <div class="tab-content" id="v-pills-tabContent">
+              <!-- Profile Settings Tab -->
+              <div class="tab-pane fade show active" id="v-pills-profile" role="tabpanel"
+                aria-labelledby="v-pills-profile-tab">
+                <h3>Profile Settings</h3>
+                <form>
+                  <div class="mb-3">
+                    <label for="fullName" class="form-label">Full Name</label>
+                    <input type="text" class="form-control" id="fullName" value="John Doe">
+                  </div>
+                  <div class="mb-3">
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="email" value="john.doe@example.com">
+                  </div>
+                  <button type="submit" class="btn btn-primary">Update Profile</button>
+                </form>
+
+                <hr class="my-4">
+
+                <h3>Change Password</h3>
+                <form>
+                  <div class="mb-3">
+                    <label for="currentPassword" class="form-label">Current Password</label>
+                    <input type="password" class="form-control" id="currentPassword">
+                  </div>
+                  <div class="mb-3">
+                    <label for="newPassword" class="form-label">New Password</label>
+                    <input type="password" class="form-control" id="newPassword">
+                  </div>
+                  <div class="mb-3">
+                    <label for="confirmPassword" class="form-label">Confirm New Password</label>
+                    <input type="password" class="form-control" id="confirmPassword">
+                  </div>
+                  <button type="submit" class="btn btn-primary">Change Password</button>
+                </form>
+              </div>
+
+              <!-- My Reservations Tab -->
+              <div class="tab-pane fade" id="v-pills-reservations" role="tabpanel"
+                aria-labelledby="v-pills-reservations-tab">
+                <h3>My Reservations</h3>
+                <div class="list-group">
+                  <div class="list-group-item">
+                    <div class="d-flex w-100 justify-content-between">
+                      <h5 class="mb-1">Paris Romance Tour</h5>
+                      <small>3 days ago</small>
+                    </div>
+                    <p class="mb-1"><strong>Date:</strong> 2025-12-15 - 2025-12-20</p>
+                    <p class="mb-1"><strong>Status:</strong> Confirmed</p>
+                    <small>Reservation ID: #12345</small>
+                  </div>
+                  <div class="list-group-item">
+                    <div class="d-flex w-100 justify-content-between">
+                      <h5 class="mb-1">Bali Adventure</h5>
+                      <small>1 week ago</small>
+                    </div>
+                    <p class="mb-1"><strong>Date:</strong> 2026-01-20 - 2026-01-27</p>
+                    <p class="mb-1"><strong>Status:</strong> Pending</p>
+                    <small>Reservation ID: #12346</small>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Payment History Tab -->
+              <div class="tab-pane fade" id="v-pills-payments" role="tabpanel" aria-labelledby="v-pills-payments-tab">
+                <h3>Payment History</h3>
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col">Date</th>
+                      <th scope="col">Description</th>
+                      <th scope="col">Amount</th>
+                      <th scope="col">Status</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>2025-11-10</td>
+                      <td>Paris Romance Tour</td>
+                      <td>$1,299.00</td>
+                      <td><span class="badge bg-success">Paid</span></td>
+                    </tr>
+                    <tr>
+                      <td>2025-11-06</td>
+                      <td>Bali Adventure (Deposit)</td>
+                      <td>$200.00</td>
+                      <td><span class="badge bg-success">Paid</span></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </section><!-- End User Profile Section -->
+
+  </main>
+
+  <footer id="footer" class="footer position-relative dark-background">
+
+    <div class="container footer-top">
+      <div class="row gy-4">
+        <div class="col-lg-4 col-md-6 footer-about">
+          <a href="../index.html" class="d-flex align-items-center">
+            <span class="sitename">Tour</span>
+          </a>
+          <div class="footer-contact pt-3">
+            <p>Av. 9 de Octubre</p>
+            <p>Guayaquil, Ecuador</p>
+            <p class="mt-3"><strong>Teléfono:</strong> <span>+593 987654321</span></p>
+            <p><strong>Correo:</strong> <span>wordlagency@gmail.com</span></p>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><i class="bi bi-chevron-right"></i> <a href="../index.html">Inicio</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="about.html">Sobre Nosotros</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="destinations.html">Destinos</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="tours.html">Tours</a></li>
+          </ul>
+        </div>
+
+
+        <div class="col-lg-4 col-md-12">
+          <h4>Síguenos</h4>
+          <p>Nuestros canales de redes sociales</p>
+          <div class="social-links d-flex">
+            <a href=""><i class="bi bi-twitter-x"></i></a>
+            <a href=""><i class="bi bi-facebook"></i></a>
+            <a href=""><i class="bi bi-instagram"></i></a>
+            <a href=""><i class="bi bi-linkedin"></i></a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </footer>
+
+
+  <!-- Scroll Top -->
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Preloader -->
+  <div id="preloader"></div>
+
+  <!-- Vendor JS Files -->
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../vendor/php-email-form/validate.js"></script>
+  <script src="../vendor/aos/aos.js"></script>
+  <script src="../vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="../vendor/swiper/swiper-bundle.min.js"></script>
   <script src="../vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="../vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
@@ -266,6 +460,7 @@
 
   <!-- Main JS File -->
   <script src="../js/main.js"></script>
+  <script type="module" src="../src/controllers/AuthController.js"></script>
 </body>
 
 </html>
